--- a/app/src/main/res/layout/item_challengelist.xml
+++ b/app/src/main/res/layout/item_challengelist.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView"
-        style="@style/word_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_orange_light" />
+        android:background="@color/peach_yellow"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 </LinearLayout>
