--- a/app/src/main/res/layout/activity_challenge.xml
+++ b/app/src/main/res/layout/activity_challenge.xml
@@ -16,13 +16,13 @@
         android:text="@string/placeholder"
         android:textColor="@color/dark_purple"
         android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/challenge_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder"
         android:textSize="16sp" />
 
     <View
