--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
-        android:src="@drawable/baseline_add_24"
-        android:theme="@style/Theme.MaterialComponents.Light"
+        android:src="@drawable/round_add_24"
+        app:tint="@color/peach_yellow"
         app:backgroundTint="@color/burnt_orange"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerview"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="48dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
