--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.ArtApp" parent="android:Theme.Material.Light.NoActionBar" />
-    <!-- Base application theme. -->
-    <!-- <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="ArtApp.Light" parent="@style/Theme.MaterialComponents.Light">
+        <item name="actionBarTheme">@style/ArtApp.Light.Widget.ActionBar</item>
+        <item name="actionBarStyle">@style/ArtApp.Light.Widget.ActionBar</item>
+        <item name="colorPrimaryDark">@color/sandy_brown</item>
+        <item name="fontFamily">@font/pixelfy_sans</item>
+        <item name="android:fontFamily">@font/pixelfy_sans</item>
     </style>
-    -->
+    <style name="ArtApp.Light.Widget.ActionBar" parent="@style/Widget.MaterialComponents.ActionBar.Solid">
+        <item name="background">@color/peach_yellow</item>
+        <item name="android:textColorPrimary">@color/burnt_orange</item>
+        <item name="titleTextStyle">@style/ArtApp.Light.Widget.ActionBar.Title</item>
+    </style>
 
-    <!-- The default font for RecyclerView items is too small.
-    The margin is a simple delimiter between the words. -->
-    <style name="word_title">
-        <item name="android:layout_marginBottom">8dp</item>
-        <item name="android:paddingLeft">8dp</item>
-        <item name="android:background">@android:color/holo_orange_light</item>
-        <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
+    <style name="ArtApp.Light.Widget.ActionBar.Title" parent="@style/TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
