--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,11 +25,15 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
-        android:src="@drawable/round_add_24"
-        app:tint="@color/peach_yellow"
-        app:backgroundTint="@color/burnt_orange"
+        android:src="@drawable/circle_fab"
+        app:backgroundTint="@color/transparent"
+        app:backgroundTintMode="src_in"
+        app:elevation="0dp"
+        app:fabSize="auto"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerview"
         app:layout_constraintEnd_toEndOf="parent"
-        app:maxImageSize="48dp" />
+        app:maxImageSize="55dp"
+        app:pressedTranslationZ="0dp"
+        app:tint="@null" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
