--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/sandy_brown</item>
         <item name="fontFamily">@font/pixelfy_sans</item>
         <item name="android:fontFamily">@font/pixelfy_sans</item>
+        <item name="colorPrimary">@color/burnt_orange</item>
     </style>
     <style name="ArtApp.Light.Widget.ActionBar" parent="@style/Widget.MaterialComponents.ActionBar.Solid">
         <item name="background">@color/peach_yellow</item>
