--- a/app/src/main/res/layout/item_promptlist.xml
+++ b/app/src/main/res/layout/item_promptlist.xml
@@ -5,25 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/promptlist_name"
-        android:layout_width="0dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/promptlist_card"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="@string/placeholder"
-        android:textSize="16sp"
+        android:layout_margin="6dp"
+        app:cardBackgroundColor="@color/light_gray"
+        app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <View
-        android:id="@+id/promptlist_divider"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/promptlist_name" />
+        <TextView
+            android:id="@+id/promptlist_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
+            android:minLines="3"
+            android:padding="8dp"
+            android:text="@string/placeholder"
+            android:textColor="@color/dark_purple"
+            android:textSize="16sp" />
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
