--- a/app/src/main/res/layout/activity_challenge.xml
+++ b/app/src/main/res/layout/activity_challenge.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="@string/placeholder"
+        android:text="@string/placeholder_text"
         android:textColor="@color/dark_purple"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -33,7 +33,7 @@
         android:background="?android:attr/listDivider" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/challenge_promptlist"
+        android:id="@+id/challenge_prompt_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </androidx.appcompat.widget.LinearLayoutCompat>
