--- a/app/src/main/res/layout/item_prompt_add.xml
+++ b/app/src/main/res/layout/item_prompt_add.xml
@@ -16,21 +16,22 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/promptadd_name"
+            android:id="@+id/prompt_add_name"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
             android:layout_weight="7"
             android:ems="10"
             android:gravity="center_vertical"
-            android:text="@string/placeholder"
+            android:text="@string/placeholder_text"
             android:textSize="16sp" />
 
         <ImageButton
-            android:id="@+id/promptadd_delete"
+            android:id="@+id/prompt_add_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:contentDescription="@string/challenge_new_delete_prompt"
             android:src="@android:drawable/ic_menu_delete" />
     </LinearLayout>
 
