--- a/app/src/main/res/layout/item_promptlist.xml
+++ b/app/src/main/res/layout/item_promptlist.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/promptlist_card"
+        android:id="@+id/prompt_list_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
@@ -17,13 +17,13 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/promptlist_name"
+            android:id="@+id/prompt_list_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
             android:minLines="3"
             android:padding="8dp"
-            android:text="@string/placeholder"
+            android:text="@string/placeholder_text"
             android:textColor="@color/dark_purple"
             android:textSize="16sp" />
     </androidx.cardview.widget.CardView>
