--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/import_json"
-        android:title="Import"
-        android:icon="@drawable/icon_download"
+    <item android:id="@+id/settings"
+        android:title="@string/settings"
+        android:icon="@drawable/cog"
         app:showAsAction="ifRoom"
         android:iconTint="@color/white"/>
 </menu>
